# rss-to-tts

./: .gitignore  README.md  config.json  generate_rss.py  get_rss.py  parallel.py  parse_text.py  process_feed.py  pyproject.toml  test_rss.py  test_text.py  tts.py
data/: db.sqlite  db.sqlite-journal
src/rss_to_tts/: delete_feed_articles.py  generate_rss.py  get_rss.py  parallel.py  parse_text.py  process_feed.py  read_db.py  split_text.py  tts_local.py
tests/: test_rss.py  test_text.py
