[tool.poetry]
name = "rss-to-tts"
version = "0.1.0"
description = ""
authors = ["Nicky Pochinkov <work@nicky.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.60.2"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
