[tool.poetry]
name = "rss-to-tts"
version = "0.1.0"
description = ""
authors = ["Nicky Pochinkov <work@nicky.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
openai = "^1.60.2"
numpy = "^1.26.4"
soundfile = "^0.13.1"
feedparser = "^6.0.11"
python-dotenv = "^1.0.1"
substack-api = "^1.0.2"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
munch = "^4.0.0"
kokoro = "^0.8.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
